[gd_scene load_steps=4 format=3 uid="uid://ci3p7vay8um04"]

[ext_resource type="Texture2D" uid="uid://dtloxvw3iahg8" path="res://Sprites/SymptomButton.png" id="1_srpcp"]
[ext_resource type="Script" path="res://Scripts/SymptomButton.gd" id="3_q24u1"]

[sub_resource type="LabelSettings" id="LabelSettings_1qyfs"]
font_size = 18
font_color = Color(0.380392, 0.435294, 0.313726, 1)

[node name="SymptomButton" type="TextureButton"]
offset_right = 241.0
offset_bottom = 56.0
scale = Vector2(1, 0.5)
texture_normal = ExtResource("1_srpcp")
script = ExtResource("3_q24u1")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 18.0
scale = Vector2(1, 2)
text = ".
"
label_settings = SubResource("LabelSettings_1qyfs")
vertical_alignment = 2

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="item_rect_changed" from="Label" to="." method="_on_label_item_rect_changed"]
